extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr3.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/parser/exerr3.obr:11:7:error: 'DO' expected but 'R' found
      Result := 0;
      ^
